@@ -25,6 +25,10 @@ now are in the W3C dateTime standard format instead of PasswordSafe's.  This rel
 can nolonger import XML files with date time fields in the old PasswordSafe's forms.
 See Help file (the XML section of "Import Password Entries") on how to manually change
 the XML file exported prior to V3.26 to allow it to be successfully imported in this release.
+[] After closing the current database, on opening another, PasswordSafe will first
+attempt to access the directory of the last opened database in order to allow the user
+to start browsing for their intended database.  If this directory is not available,
+PasswordSafe will open the default "My Safes" directory as it did prior to this change.
 
 Bugs fixed in 3.27.1
 ====================
